# Tint-grammar-aware-fuzzer

./: .gitignore  .ninja_deps  .ninja_log  0001-COMMIT.patch  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: Adapter.cpp.24599C5448997502.idx  Adapter.cpp.3B9606BB04C55A2A.idx  Adapter.h.565779C717B7A91C.idx  Adapter.h.6896AE0AB4C32A62.idx  Alloc.h.030FDF8C317F2EE8.idx  Animometer.cpp.6217E78BBAD0B3F4.idx  ApiObjects_autogen.h.938006E787513648.idx  ApiProcs_autogen.cpp.E39BD9090E741880.idx  ApplyClearColorValueWithDrawHelper.cpp.0C889B242C0476B3.idx  ApplyClearColorValueWithDrawHelper.h.276A2CB16601EE60.idx  Assert.cpp.8EF51A9BFAD9C6BE.idx  Assert.h.C5D801C05EF11347.idx  AsyncTask.cpp.D8C2B7B4FA224B32.idx  AsyncTask.h.2568084BFA6CB79C.idx  AttachmentState.cpp.2C6BD95ECC286B54.idx  AttachmentState.h.7402C71A39A468A1.idx  BackendConnection.cpp.95F6655FF88E11F7.idx  BackendConnection.h.E3E3D127EEA6C8CB.idx  BackendMTL.h.8E5D2B4874B38F56.idx  BackendMTL.mm.73F9DDF593AA6916.idx  BaseTypes.h.B3907F49054F9E96.idx  BinarySemaphore.cpp.C58A51550435651B.idx  BinarySemaphore.h.151DD0288CCCB57E.idx  BindGroup.cpp.8EFDCB1E470EC53B.idx  BindGroup.h.D9BAC0EF63CD5605.idx  (+3645 more)
generator/: CTestTestfile.cmake  cmake_install.cmake
src/dawn/: CTestTestfile.cmake  cmake_install.cmake
src/tint/: CTestTestfile.cmake  cmake_install.cmake
src/tint/fuzzers/tint_structure_fuzzer/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  syntax.cc  syntax.h  tint_structure_fuzzer.cc
(+23 files in other folders)
